# cost-obs-lakebase

./: .databricksignore  .gitignore  README.md  app.yaml  app.yaml.example  databricks.yml  pyproject.toml  requirements.txt
client/: index.html  package.json  vite.config.ts
client/public/: animations.css
client/src/: App.tsx  index.css  main.tsx
db/: bootstrap_lakebase_schema.py  provision_lakebase.py
jobs/: mv_refresh_job.json.template
server/: __init__.py  alert_manager.py  alerting.py  app.py  aws_cur_setup.py  azure_cost_setup.py  cloud_pricing.py  db.py  email_service.py  errors.py  lakebase.py  lakebase_populate.py  lakebase_populate_from_source.py  materialized_views.py
server/queries/: __init__.py  use_cases_setup.sql
server/routers/: aiml.py  alerts.py  apps.py  aws_actual.py  azure_actual.py  billing.py  dbsql.py  dbsql_base.py  dbsql_prpr.py  gcp_actual.py  genie.py  health.py  permissions.py  query_origin.py  settings.py  setup.py  tagging.py  use_cases.py  user.py  users_groups.py  warehouse_health.py
static/: index.html
static/assets/: AIMLCostCenter-2Eq2v_GE.js  AIMLCostCenter-4CYhh4At.js  AIMLCostCenter-B-zg0fnz.js  AIMLCostCenter-B7Y9NTgu.js  AIMLCostCenter-BCP4e8tV.js  AIMLCostCenter-BDHEyLg9.js  AIMLCostCenter-BacOcAEq.js  AIMLCostCenter-BxHtaN2O.js  AIMLCostCenter-CR-5-OrH.js  AIMLCostCenter-Ca-X0rG_.js  AIMLCostCenter-DW_QZIid.js  AIMLCostCenter-DoYiM_sc.js  AIMLCostCenter-GlARTjV5.js  AIMLCostCenter-OgtfgSkK.js  AIMLCostCenter-nXx7Qs_V.js  AIMLCostCenter-wlBkx7VJ.js  Alerts-1j0jLUvO.js  Alerts-B0aFUx8L.js  Alerts-BLyz8wPk.js  (+202 more)
(+46 files in other folders)
